customer add part complete

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -78,27 +78,29 @@
                             </div>
                             <div class="modal-body">
                                 <div CLASS="row">
+                                    <form id="customerForm">
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="CustomerId">Customer Id</label>
-                                        <input type="email" class="form-control" id="customerId" placeholder="">
+                                        <input type="email" class="form-control" id="customerId" placeholder="" name="id">
 
                                     </div>
 
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="CustomerName">Customer Name</label>
-                                        <input type="email" class="form-control" id="customerName" placeholder="">
+                                        <input type="email" class="form-control" id="customerName" placeholder="" name="name">
 
                                     </div>
 
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="customerAddress">Customer Address</label>
-                                        <input type="email" class="form-control" id="customerAddress" placeholder="">
+                                        <input type="email" class="form-control" id="customerAddress" placeholder="" name="address">
 
                                     </div>
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="salary">Salary</label>
-                                        <input type="email" class="form-control" id="salary" placeholder="">
+                                        <input type="email" class="form-control" id="salary" placeholder="" name="salary">
                                     </div>
+                                    </form>
                                 </div>
                             </div>
 
