item save part done

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -194,27 +194,29 @@
                             </div>
                             <div class="modal-body">
                                 <div CLASS="row">
+                                    <form id="itemForm">
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="iCode">Item code</label>
-                                        <input type="email" class="form-control" id="iCode" placeholder="">
+                                        <input type="email" class="form-control" id="iCode" placeholder="" name="itmCode">
 
                                     </div>
 
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="Name">Item Name</label>
-                                        <input type="email" class="form-control" id="iName" placeholder="">
+                                        <input type="email" class="form-control" id="iName" placeholder="" name="itemName">
 
                                     </div>
 
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="Price">Item Price</label>
-                                        <input type="email" class="form-control" id="iPrice" placeholder="">
+                                        <input type="email" class="form-control" id="iPrice" placeholder="" name="itemPrice">
 
                                     </div>
                                     <div class="mb-2 col-12">
                                         <label class="form-label" for="iQuantity">Quantity</label>
-                                        <input type="email" class="form-control" id="iQuantity" placeholder="">
+                                        <input type="email" class="form-control" id="iQuantity" placeholder="" name="itemQty">
                                     </div>
+                                    </form>
                                 </div>
                             </div>
                             <div class="modal-footer">
